# kimuraPINN

./: README.md  adhesive_capsulitis_gwas_bootstrap.pptx  environment.yml  kimura_pinn_master_prompt_script.md  pyproject.toml  requirements.txt  sitecustomize.py
configs/: simulate_time_varying_selection.yaml  single_pop_folded.yaml  three_pop_admixture.yaml  time_varying_selection.yaml  two_pop_admixture.yaml  validate_time_varying_selection.yaml
data/processed/: allele_counts.tsv  folded_sfs_afr.tsv  folded_sfs_eas.tsv  folded_sfs_summary.json
results/admixture_afr_nfe_test/: gamma_trajectory.tsv  loss_history.tsv  metrics.json  migration_matrix.tsv  model.pt  predicted_sfs_afr.tsv  run_config.yaml
results/simulation_step_gamma_test/: folded_sfs_simulated.tsv  simulation_config.yaml
results/time_varying_nfe_test/: gamma_trajectory.tsv  loss_history.tsv  metrics.json  model.pt  run_config.yaml
results/validation_step_gamma_test/: gamma_recovery_metrics.json  model.pt  (+6 more)
scripts/: 01_vcf_to_folded_sfs.py  03_train_time_varying_gamma.py  04_train_admixture_pinn.py  05_visualize_results.py  06_simulate_single_pop_sfs.py  07_validate_time_varying_gamma.py
src/: __init__.py
tests/: test_admixture_model.py  test_demography_model.py  test_folded_sfs.py  test_losses.py  test_marginal_projection.py  test_multipop_pde.py  test_pde_residual.py  test_pinn.py  test_projection.py  test_selection_model.py  test_simulate_sfs.py  test_simulate_wf.py  test_training_smoke.py  test_two_pop_training_smoke.py  test_validation_pipeline.py  test_vcf_parser.py  test_visualization.py
(+33 files in other folders)
